kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: carshub-frontend-service
spec:
  type: NodePort
  selector:
    app: carshub-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
