kubernetes/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: carshub
#   annotations:
#     kubernetes.io/ingress.global-static-ip-name: carshub-ip
# spec:
#   rules:
#     - host: mygcpprojects.xyz
#       http:
#         paths:
#           - path: /*
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: carshub-frontend-service
#                 port:
#                   number: 3000
#     - host: api.mygcpprojects.xyz
#       http:
#         paths:
#           - path: /*
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: carshub-backend-service
#                 port:
#                   number: 3001
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carshub-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: carshub-backend-service
                port:
                  number: 3001
